--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,8 @@ geopy==2.4.1
 python-socketio==5.10.0
 python-engineio==4.8.0
 gevent==23.9.1
-gevent-websocket==0.10.1 
+gevent-websocket==0.10.1
+pymavlink==2.4.40
+dronekit==2.9.2
+numpy==1.24.3
+pyserial==3.5
